<resources>
    <string name="app_name">Asumu</string>

    <string name="title_activity_login_splash_screen">LoginSplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="target_title">Laptop Baru</string>
    <string name="dummy_content">5.000.000</string>
    <string name="target_remaining">7 days to go</string>
    <string name="item_1">Home</string>
    <string name="item_2">History</string>
    <string name="item_3">Achievement</string>
    <string name="item_4">Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">Sign in</string>
    <string name="email_nrp_prompt_label">Email</string>
    <string name="password_prompt_label">Password</string>
    <string name="welcome_message_1">Welcome to</string>
    <string name="welcome_message_2">"Asisten Keuanganmu"</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register_direct_string">don\'t have account? Register here</string>
    <string name="confirm_password_prompt_label">Confirm Password</string>
    <string name="register_button_label">Register</string>
    <string name="username_prompt_label">User Name</string>
    <string name="error_msg_nama">username can\'t be null</string>
    <string name="error_msg_password">password can\'t be null</string>
    <string name="error_msg_konfirm_password">confirm password can\'t be null</string>
    <string name="error_msg_konfirm_password_2">confirm password isn\'t match</string>
    <string name="error_msg_email">email can\'t be null</string>
    <string name="error_msg_email2">ensure you have entered email format correctly</string>
    <string name="open_camera_btn_string">Open Camera</string>
    <string name="tv_empty_value">-</string>

</resources>
